# ydk-gen

./: .gitmodules  .travis.yml  README.md  generate.py  index.html  params.json
profiles/bundles/: cisco-ios-xe_16_6_1.json
profiles/test/: openconfig.json  ydktest.json
sdk/cpp/: CMakeLists.txt  Makefile  README.md
sdk/cpp/core/: CMakeLists.txt
sdk/cpp/samples/: bgp_grouping_sample.cpp  bgp_xr_read.cpp
sdk/cpp/tests/: CMakeLists.txt  Makefile  test_core_netconf.cpp  test_crud.cpp  test_netconf_client.cpp  test_sanity_levels.cpp  test_xml_subtree.cpp
sdk/cpp/ydk/: c_wrapper.cpp  c_wrapper.h  make_unique.h  netconf_client.cpp  netconf_client.h  providers.cpp  types.h
sdk/go/: README.md
sdk/python/: README.rst
sdk/python/core/: CMakeLists.txt  python.cpp  setup.py
sdk/python/tests/: test_sanity_types.py
test/: check.py  confd.conf  dependencies_ubuntu_basic.sh  tests.sh  travis_ci.sh
ydkgen/: __init__.py  api_model.py  common.py
ydkgen/printer/: __init__.py  file_printer.py  language_bindings_printer.py  language_factory.py  meta_data_util.py  ydk_printer.py
ydkgen/printer/cplusplus/: cplusplus_printer.py  header_printer.py  source_printer.py
ydkgen/printer/cpp/: class_constructor_printer.py  class_get_children_printer.py  class_get_entity_path_printer.py  class_members_printer.py  class_source_printer.py  cpp_bindings_printer.py  entity_lookup_printer.py  header_printer.py  source_printer.py
ydkgen/printer/python/: class_get_child_by_name_printer.py  class_get_entity_path_printer.py  class_inits_printer.py  class_printer.py  enum_printer.py  (+6 more)
(+181 files in other folders)
